--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "@upstash/ratelimit": "^0.4.3",
+    "@upstash/redis": "^1.21.0",
     "dayjs": "^1.11.7",
     "next": "^13.4.1",
     "react": "18.2.0",
