--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,10 +14,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Dependencies
-        run: pnpm install
+        run: npm install
 
       - name: Type Check
-        run: pnpm run typecheck
+        run: npm run typecheck
 
       - name: Lint
-        run: pnpm run lint
+        run: npm run lint
