ci: fix ci for install pnpm

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,12 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+    pull_request:
+      branches:
+        - main
 
 env:
   DATABASE_URL: "https://fake.com"
@@ -13,11 +19,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Install PNPM
+        run: npm install -g pnpm
+
       - name: Install Dependencies
-        run: npm install
+        run: pnpm install
 
       - name: Type Check
-        run: npm run typecheck
+        run: pnpm run typecheck
 
       - name: Lint
-        run: npm run lint
+        run: pnpm run lint
